--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "devDependencies": {
-    "esbuild": "^0.24.0"
-  },
-  "dependencies": {
+    "esbuild": "^0.24.0",
     "@types/vscode": "^1.94.0"
   },
   "workspaces": [
