--- a/packages/main/package.json
+++ b/packages/main/package.json
@@ -2,6 +2,7 @@
   "type": "module",
   "devDependencies": {
     "esbuild": "^0.24.0",
+    "@types/node": "^22.7.5",
     "@types/vscode": "^1.94.0"
   },
   "scripts": {
