--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
+  "scripts": {
+    "package": "cd dist && vsce package"
+  },
   "devDependencies": {
     "@types/node": "^22.7.5",
     "@types/vscode": "^1.94.0",
+    "@vscode/vsce": "^3.1.1",
     "esbuild": "^0.24.0"
   },
   "workspaces": [
