--- a/packages/main/package.json
+++ b/packages/main/package.json
@@ -6,6 +6,7 @@
     "@types/vscode": "^1.94.0"
   },
   "scripts": {
-    "build": "node build.js"
+    "build-dev": "node build.js dev",
+    "build-pro": "node build.js pro"
   }
 }
